Fix styles on mobile

--- a/src/components/ScoreSheet.css
+++ b/src/components/ScoreSheet.css
@@ -15,6 +15,8 @@
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 500;
     color: #7c795d;
+    max-width: calc(100vw - 200px);
+    vertical-align: middle;
 }
 
 table {
@@ -39,11 +41,25 @@ tr:nth-child(even) {
 .Event {
     display: inline-block;
     margin-left: 20px;
+    max-width: calc(100vw - 200px);
+    vertical-align: middle;
+}
+
+.Ellipsis {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .Error {
     color: red;
     margin: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+    ScoreSheet {
+      padding: 20px 10px;
+    }
 }
 
 @media print {
@@ -85,6 +101,7 @@ tr:nth-child(even) {
     text-align: right;
     font-weight: 500;
     font-family: "Source Sans Pro", sans-serif;
+    vertical-align: middle;
 }
 
 
